kontrol noktasi olusturuldu - 7
